progress table loaded

--- a/etl_show_progress_table.ipynb
+++ b/etl_show_progress_table.ipynb
@@ -14,6 +14,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from bs4 import BeautifulSoup\n",
     "from sqlalchemy import create_engine"
    ]
   },
@@ -29,33 +31,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Concursante Ep. 1 Suertuda Ep. 2 Prehispánica Ep. 3 Fichera  \\\n",
-      "0     Aviesc Who?           ALTA              MENOS        LA MÁS   \n",
-      "1  Madison Basrey           SALV               ALTA          ALTA   \n",
-      "2   Raga Diamante           SALV             LA MÁS          SALV   \n",
-      "3      Rudy Reyes           SALV               SALV          BAJA   \n",
-      "4      Memo Reyri           ALTO               SALV          SALV   \n",
+      "       Concursante Ep. 1 Suertuda Ep. 2 Prehispánica Ep. 3 Fichera  \\\n",
+      "0      Aviesc Who?           ALTA              MENOS        LA MÁS   \n",
+      "1   Madison Basrey           SALV               ALTA          ALTA   \n",
+      "2    Raga Diamante           SALV             LA MÁS          SALV   \n",
+      "3       Rudy Reyes           SALV               SALV          BAJA   \n",
+      "4       Memo Reyri           ALTO               SALV          SALV   \n",
+      "5        Mista Boo         LA MÁS               SALV          SALV   \n",
+      "6     Regina Bronx           SALV               SALV          SALV   \n",
+      "7      Iviza Lioza           BAJA               SALV          SALV   \n",
+      "8     Luna Lansman           SALV               BAJA          ALTA   \n",
+      "9           Wynter           SALV               SALV          SALV   \n",
+      "10        Huntyy B           SALV               SALV         MENOS   \n",
+      "11       StupiDrag          MENOS               ALTA          ELIM   \n",
+      "12    Yayoi Bowery          MENOS               ELIM           NaN   \n",
       "\n",
-      "  Ep. 4 Chespirito Ep. 5 Famosa Ep. 6 Legendaria Ep. 7 Bella Srta. México  \\\n",
-      "0             SALV         ELIM              NaN                      NaN   \n",
-      "1             SALV         ALTA           LA MÁS                     ALTA   \n",
-      "2           LA MÁS         ALTA             SALV                   LA MÁS   \n",
-      "3             SALV         BAJA            MENOS                     ALTA   \n",
-      "4             SALV       EL MÁS             ALTO                     BAJO   \n",
+      "   Ep. 4 Chespirito Ep. 5 Famosa Ep. 6 Legendaria Ep. 7 Bella Srta. México  \\\n",
+      "0              SALV         ELIM              NaN                      NaN   \n",
+      "1              SALV         ALTA           LA MÁS                     ALTA   \n",
+      "2            LA MÁS         ALTA             SALV                   LA MÁS   \n",
+      "3              SALV         BAJA            MENOS                     ALTA   \n",
+      "4              SALV       EL MÁS             ALTO                     BAJO   \n",
+      "5              SALV         SALV             SALV                     SALV   \n",
+      "6             MENOS       LA MÁS             ALTA                    MENOS   \n",
+      "7              BAJA         SALV             BAJA                     ELIM   \n",
+      "8              ALTA         SALV             ELIM                      NaN   \n",
+      "9              ALTA         ELIM              NaN                      NaN   \n",
+      "10             ELIM          NaN              NaN                      NaN   \n",
+      "11              NaN          NaN              NaN                      NaN   \n",
+      "12              NaN          NaN              NaN                      NaN   \n",
       "\n",
-      "  Ep. 8 Buchona Ep. 9 Antojable Ep. 10 Día de Muertas Ep. 11 Gran Final  \n",
-      "0          ALTA           MENOS           Compitiendo          Ganadora  \n",
-      "1        LA MÁS            SALV           Compitiendo         Finalista  \n",
-      "2          SALV            ALTA           Compitiendo         Finalista  \n",
-      "3          SALV          LA MÁS           Compitiendo         Finalista  \n",
-      "4         MENOS            ELIM              Invitado          Invitado  \n"
+      "   Ep. 8 Buchona Ep. 9 Antojable Ep. 10 Día de Muertas Ep. 11 Gran Final  \n",
+      "0           ALTA           MENOS           Compitiendo          Ganadora  \n",
+      "1         LA MÁS            SALV           Compitiendo         Finalista  \n",
+      "2           SALV            ALTA           Compitiendo         Finalista  \n",
+      "3           SALV          LA MÁS           Compitiendo         Finalista  \n",
+      "4          MENOS            ELIM              Invitado          Invitado  \n",
+      "5           ALTA            ELIM              Invitada          Invitada  \n",
+      "6           ELIM             NaN              Invitada          Invitada  \n",
+      "7            NaN             NaN              Invitada          Invitada  \n",
+      "8            NaN             NaN              Invitada               LMV  \n",
+      "9            NaN             NaN              Invitada               LMQ  \n",
+      "10           NaN             NaN              Invitada          Invitada  \n",
+      "11           NaN             NaN              Invitada          Invitada  \n",
+      "12           NaN             NaN              Invitada          Invitada  \n"
      ]
     }
    ],
@@ -69,12 +95,12 @@
     "progress_s4 = html[13]\n",
     "progress_s5 = html[16]\n",
     "progress_s6 = html[19]\n",
-    "print(progress_s3.head())"
+    "print(progress_s3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -299,24 +325,25 @@
     }
    ],
    "source": [
-    "# Create data frames from tables\n",
-    "def create_data_frames(tables):\n",
-    "    \"\"\"Creates a list of Pandas DataFrames from a list of tables.\n",
+    "# create data frames from all the tables\n",
+    "def create_dataframes(tables):\n",
+    "  \"\"\"Creates a list of Pandas DataFrames from a list of tables.\n",
     "\n",
     "  Args:\n",
-    "    tables: A list of tables.\n",
+    "    tables: A list of tables\n",
     "\n",
     "  Returns:\n",
     "    A list of Pandas DataFrames, where each DataFrame represents a table.\n",
     "  \"\"\"\n",
-    "    dataframes=[]\n",
-    "    for table in tables:\n",
-    "        df = pd.DataFrame(table)\n",
-    "        dataframes.append(df)\n",
-    "    return dataframes\n",
     "\n",
-    "all_df = create_data_frames(progress_tables)\n",
-    "print(all_df)"
+    "  df = []\n",
+    "  for table in tables:\n",
+    "    dataframe = pd.DataFrame(table)\n",
+    "    df.append(dataframe)\n",
+    "  return df\n",
+    "\n",
+    "progress_all_df = create_dataframes(progress_tables)\n",
+    "print(progress_all_df)"
    ]
   },
   {
@@ -328,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -438,20 +465,20 @@
        "4           ELIM             NaN             Invitada    Invitada  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create a data frame for season 1\n",
+    "# create a data frame for each season\n",
     "df = pd.DataFrame(progress_s1)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -468,14 +495,14 @@
     }
    ],
    "source": [
-    "# Use melt to create a long data frame\n",
+    "# Melt the DataFrame to achieve the desired format\n",
     "melted_df = pd.melt(df, id_vars=[\"Concursante\"], var_name=\"Nombre_de_episodio\", value_name=\"Progreso\")\n",
     "print(melted_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -492,65 +519,25 @@
     }
    ],
    "source": [
-    "# create new columns\n",
+    "# Add new columns\n",
     "melted_df[\"Episodio\"] = melted_df[\"Nombre_de_episodio\"].str.extract(r'(\\d+)').astype(int)\n",
     "melted_df[\"Nombre_de_episodio\"] = melted_df[\"Nombre_de_episodio\"].str.replace(r'Ep. \\d+ ', '', regex=True)\n",
-    "\n",
     "print(melted_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Concursante  Episodio Nombre_de_episodio Progreso\n",
-      "0  Deborah \"La Grande\"         1               Diva    MENOS\n",
-      "1      Bárbara Durango         1               Diva     BAJA\n",
-      "2            Eva Blunt         1               Diva     SALV\n",
-      "3        Margaret y Ya         1               Diva     ALTA\n",
-      "4         Lana Boswell         1               Diva     SAFE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reorder columns\n",
-    "melted_df = melted_df[[\"Concursante\", \"Episodio\", \"Nombre_de_episodio\", \"Progreso\"]]\n",
-    "\n",
-    "print(melted_df.head())"
+    "melted_df = melted_df[[\"Concursante\", \"Episodio\", \"Nombre_de_episodio\", \"Progreso\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Concursante  Episodio Nombre_de_episodio Progreso\n",
-      "1   Bárbara Durango         1               Diva     BAJA\n",
-      "8   Bárbara Durango         2        Quinceañera     SALV\n",
-      "15  Bárbara Durango         3             Thalía    MENOS\n",
-      "22  Bárbara Durango         4           Alebrije    MENOS\n",
-      "29  Bárbara Durango         5          Dramática   LA MÁS\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Sort by Concursante and Episodio\n",
-    "melted_df.sort_values(by=[\"Concursante\", \"Episodio\"], inplace=True)\n",
-    "print(melted_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -567,53 +554,48 @@
     }
    ],
    "source": [
-    "# Reset index\n",
+    "# Reset index and sort values\n",
+    "melted_df.sort_values(by=[\"Concursante\", \"Episodio\"], inplace=True)\n",
     "melted_df.reset_index(drop=True, inplace=True)\n",
-    "\n",
     "print(melted_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Concursante  Episodio Nombre_de_episodio   Progreso\n",
-      "0    Bárbara Durango         1               Diva       BAJA\n",
-      "1    Bárbara Durango         1               Diva       BAJA\n",
-      "2    Bárbara Durango         1               Diva       BAJA\n",
-      "3    Bárbara Durango         1               Diva       BAJA\n",
-      "4    Bárbara Durango         1               Diva       BAJA\n",
-      "..               ...       ...                ...        ...\n",
-      "289    Margaret y Ya         7              Final  Finalista\n",
-      "290    Margaret y Ya         7              Final  Finalista\n",
-      "291    Margaret y Ya         7              Final  Finalista\n",
-      "292    Margaret y Ya         7              Final  Finalista\n",
-      "293    Margaret y Ya         7              Final  Finalista\n",
-      "\n",
-      "[294 rows x 4 columns]\n"
+      "       Concursante  Episodio Nombre_de_episodio Progreso\n",
+      "0  Bárbara Durango         1               Diva     BAJA\n",
+      "1  Bárbara Durango         1               Diva     BAJA\n",
+      "2  Bárbara Durango         1               Diva     BAJA\n",
+      "3  Bárbara Durango         1               Diva     BAJA\n",
+      "4  Bárbara Durango         1               Diva     BAJA\n"
      ]
     }
    ],
    "source": [
-    "# Create a data frame for all the seasons of the show\n",
+    "# create a progress data frame with all seasons\n",
+    "\n",
     "progress_df = []\n",
     "\n",
-    "for season in all_df :\n",
+    "for season in progress_all_df:\n",
     "    melted_df = pd.melt(df, id_vars=[\"Concursante\"], var_name=\"Nombre_de_episodio\", value_name=\"Progreso\")\n",
     "    melted_df[\"Episodio\"] = melted_df[\"Nombre_de_episodio\"].str.extract(r'(\\d+)').astype(int)\n",
     "    melted_df[\"Nombre_de_episodio\"] = melted_df[\"Nombre_de_episodio\"].str.replace(r'Ep. \\d+ ', '', regex=True)\n",
     "    melted_df = melted_df[[\"Concursante\", \"Episodio\", \"Nombre_de_episodio\", \"Progreso\"]]\n",
+    "    \n",
     "    progress_df.append(melted_df)\n",
     "\n",
     "progress_df = pd.concat(progress_df, ignore_index=True)\n",
     "progress_df.sort_values(by=[\"Concursante\", \"Episodio\"], inplace=True)\n",
     "progress_df.reset_index(drop=True, inplace=True)\n",
-    "print(progress_df)"
+    "\n",
+    "print(progress_df.head())"
    ]
   },
   {
@@ -625,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +616,7 @@
        "294"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,19 +624,19 @@
    "source": [
     "engine = create_engine(\"mysql+pymysql://root:NilArj_21@localhost:3306/project\")\n",
     "\n",
-    "table_name = \"la_mas_draga_progress\"\n",
+    "table_name = \"la_mas_draga_process\"\n",
     "\n",
     "progress_df.to_sql(\n",
     "    table_name,\n",
     "    con=engine,\n",
-    "    if_exists= \"replace\",\n",
+    "    if_exists='replace',\n",
     "    index=False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
