progress table loaded

--- a/etl_show_progress_table.ipynb
+++ b/etl_show_progress_table.ipynb
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "# create data frames from all the tables\n",
+    "# Create data frames from all the tables\n",
     "def create_dataframes(tables):\n",
     "  \"\"\"Creates a list of Pandas DataFrames from a list of tables.\n",
     "\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
     }
    ],
    "source": [
-    "# create a progress data frame with all seasons\n",
+    "# Create a progress data frame with all seasons data\n",
     "\n",
     "progress_df = []\n",
     "\n",
