--- a/drag_show.ipynb
+++ b/drag_show.ipynb
@@ -238,38 +238,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Lugar         Participante          Nombre    Lugar de residencia  Edad  \\\n",
-      "51     8      Aisha Dollkills  Andrey Miranda   San José, Costa Rica    21   \n",
-      "52     9           Light King     Juan Correa         Cali, Colombia    26   \n",
-      "53    10            Huma Kyle     Tony Porras       Chihuahua, Chih.    29   \n",
-      "54    11  Isabella y Catalina   Alex y Carlos  San Diego, California    25   \n",
-      "55    12           Deseos Fab  Alexis Vázquez       Ciudad de México    24   \n",
-      "\n",
-      "    Retos ganados     Resultado  Temporada      Selección  \n",
-      "51              0  4ª Eliminada          5     Audiciones  \n",
-      "52              0      Abandona          5    Secretísima  \n",
-      "53              0  3ª Eliminada          5     Audiciones  \n",
-      "54              0  2ª Eliminada          5   Secretísimas  \n",
-      "55              0  1ª Eliminada          5  La más Votada  \n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 70 entries, 0 to 69\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   Lugar                70 non-null     object\n",
+      " 1   Participante         70 non-null     object\n",
+      " 2   Nombre               70 non-null     object\n",
+      " 3   Lugar de residencia  70 non-null     object\n",
+      " 4   Edad                 70 non-null     int64 \n",
+      " 5   Retos ganados        70 non-null     int64 \n",
+      " 6   Resultado            59 non-null     object\n",
+      " 7   Temporada            70 non-null     int64 \n",
+      " 8   Selección            70 non-null     object\n",
+      "dtypes: int64(3), object(6)\n",
+      "memory usage: 5.0+ KB\n"
      ]
     }
    ],
    "source": [
-    "#create the data set \n",
-    "df_contestants = df_table_1.loc[df_table_1[\"Temporada\"]<6]\n",
-    "print(df_contestants.tail())"
+    "#fill null values\n",
+    "df_table_1[\"Selección\"] =  df_table_1[\"Selección\"].fillna(\"Audiciones\")\n",
+    "df_table_1.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 56 entries, 0 to 55\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   Lugar                56 non-null     object\n",
+      " 1   Participante         56 non-null     object\n",
+      " 2   Nombre               56 non-null     object\n",
+      " 3   Lugar de residencia  56 non-null     object\n",
+      " 4   Edad                 56 non-null     int64 \n",
+      " 5   Retos ganados        56 non-null     int64 \n",
+      " 6   Resultado            56 non-null     object\n",
+      " 7   Temporada            56 non-null     int64 \n",
+      " 8   Selección            56 non-null     object\n",
+      "dtypes: int64(3), object(6)\n",
+      "memory usage: 4.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a new data set by excluding the season 6\n",
+    "df_contestants = df_table_1.loc[df_table_1[\"Temporada\"]<6]\n",
+    "df_contestants.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +326,7 @@
       " 5   Retos ganados        56 non-null     int64 \n",
       " 6   Resultado            56 non-null     object\n",
       " 7   Temporada            56 non-null     int64 \n",
-      " 8   Selección            49 non-null     object\n",
+      " 8   Selección            56 non-null     object\n",
       "dtypes: int32(1), int64(3), object(5)\n",
       "memory usage: 4.2+ KB\n"
      ]
@@ -298,80 +335,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nilvi\\AppData\\Local\\Temp\\ipykernel_1444\\3492027785.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\nilvi\\AppData\\Local\\Temp\\ipykernel_1444\\1151460116.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_contestants[\"Lugar\"] = df_contestants[\"Lugar\"].astype(int)\n",
-      "C:\\Users\\nilvi\\AppData\\Local\\Temp\\ipykernel_1444\\3492027785.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_contestants[\"Lugar de residencia\"] = df_contestants[\"Lugar de residencia\"].astype(str)\n",
-      "C:\\Users\\nilvi\\AppData\\Local\\Temp\\ipykernel_1444\\3492027785.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_contestants[\"Resultado\"] = df_contestants[\"Resultado\"].astype(str)\n"
+      "  df_contestants[\"Lugar\"] = df_contestants[\"Lugar\"].astype(int)\n"
      ]
     }
    ],
    "source": [
     "#change data type\n",
     "df_contestants[\"Lugar\"] = df_contestants[\"Lugar\"].astype(int)\n",
-    "df_contestants[\"Lugar de residencia\"] = df_contestants[\"Lugar de residencia\"].astype(str)\n",
-    "df_contestants[\"Resultado\"] = df_contestants[\"Resultado\"].astype(str)\n",
     "df_contestants.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 56 entries, 0 to 55\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   Lugar                56 non-null     int32 \n",
-      " 1   Participante         56 non-null     object\n",
-      " 2   Nombre               56 non-null     object\n",
-      " 3   Lugar de residencia  56 non-null     object\n",
-      " 4   Edad                 56 non-null     int64 \n",
-      " 5   Retos ganados        56 non-null     int64 \n",
-      " 6   Resultado            56 non-null     object\n",
-      " 7   Temporada            56 non-null     int64 \n",
-      " 8   Selección            56 non-null     object\n",
-      " 9   Seleccion            56 non-null     object\n",
-      "dtypes: int32(1), int64(3), object(6)\n",
-      "memory usage: 4.6+ KB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nilvi\\AppData\\Local\\Temp\\ipykernel_1444\\2254347516.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_contestants[\"Selección\"] = df_contestants[\"Selección\"].fillna(\"Audiciones\")\n"
-     ]
-    }
-   ],
    "source": [
-    "#fill null values\n",
-    "df_contestants[\"Selección\"] = df_contestants[\"Selección\"].fillna(\"Audiciones\")\n",
-    "df_contestants.info()"
+    "## Exploratory analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"unique_values\"></a>\n",
+    "Begin by computing distinct values\n",
+    "<br>\n",
+    "<a href=\"#table_of_contents\">Navigate to contents</a>"
    ]
   }
  ],
