--- a/etl_show_progress_table.ipynb
+++ b/etl_show_progress_table.ipynb
@@ -9,19 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from bs4 import BeautifulSoup\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -306,21 +305,37 @@
       "8             Invitada  \n",
       "9                  LMQ  \n",
       "10           Invitadas  \n",
-      "11            Invitada  ,            Concursante Ep. 1 Monumental Ep. 2 Frida Ep. 3 Picada\n",
-      "0      Juana Guadalupe             ALTA        SALV       LA MÁS\n",
-      "1   Electra Walpurguis             ALTA        ALTA         ALTA\n",
-      "2            Shantelle             SALV        SALV         ALTA\n",
-      "3                Aries             SALV      LA MÁS         SALV\n",
-      "4            Cattriona             SALV        SALV         SALV\n",
-      "5                Kelly           LA MÁS        SALV         SALV\n",
-      "6                Ariel             SALV  MENOS SALV         SALV\n",
-      "7        Alexis Mvgler             SALV        SALV         SALV\n",
-      "8             Dimittra       MENOS BAJA        SALV         SALV\n",
-      "9           La Kyliezz             SALV        BAJA         BAJA\n",
-      "10               Purga             SALV        SALV        MENOS\n",
-      "11        Braulio 8000             SALV        ALTA         ELIM\n",
-      "12                 Ank       SALV MENOS        ELIM          NaN\n",
-      "13        Mizz Peaches            MENOS        ELIM          NaN]\n"
+      "11            Invitada  ,            Concursante Ep. 1 Monumental Ep. 2 Frida Ep. 3 Picada  \\\n",
+      "0                Aries             SALV      LA MÁS         SALV   \n",
+      "1                Ariel             SALV  MENOS SALV         SALV   \n",
+      "2            Cattriona             SALV        SALV         SALV   \n",
+      "3   Electra Walpurguis             ALTA        ALTA         ALTA   \n",
+      "4        Alexis Mvgler             SALV        SALV         SALV   \n",
+      "5                Kelly           LA MÁS        SALV         SALV   \n",
+      "6             Dimittra       MENOS BAJA        SALV         SALV   \n",
+      "7            Shantelle             SALV        SALV         ALTA   \n",
+      "8      Juana Guadalupe             ALTA        SALV       LA MÁS   \n",
+      "9           La Kyliezz             SALV        BAJA         BAJA   \n",
+      "10               Purga             SALV        SALV        MENOS   \n",
+      "11        Braulio 8000             SALV        ALTA         ELIM   \n",
+      "12                 Ank       SALV MENOS        ELIM          NaN   \n",
+      "13        Mizz Peaches            MENOS        ELIM          NaN   \n",
+      "\n",
+      "   Ep. 4 Recursiva  \n",
+      "0           LA MÁS  \n",
+      "1           LA MÁS  \n",
+      "2           LA MÁS  \n",
+      "3             ALTA  \n",
+      "4             ALTA  \n",
+      "5             SALV  \n",
+      "6             SALV  \n",
+      "7             BAJA  \n",
+      "8             BAJA  \n",
+      "9            MENOS  \n",
+      "10           MENOS  \n",
+      "11             NaN  \n",
+      "12             NaN  \n",
+      "13             NaN  ]\n"
      ]
     }
    ],
@@ -355,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +480,7 @@
        "4           ELIM             NaN             Invitada    Invitada  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +631,7 @@
        "294"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
