--- a/etl_show_progress_table.ipynb
+++ b/etl_show_progress_table.ipynb
@@ -2153,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2229,16 +2229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "548"
+       "463"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2246,9 +2246,9 @@
    "source": [
     "engine = create_engine(\"mysql+pymysql://root:NilArj_21@localhost:3306/project\")\n",
     "\n",
-    "table_name = \"la_mas_draga_progress\"\n",
+    "table_name = \"la_mas_draga_scores\"\n",
     "\n",
-    "progress_df.to_sql(\n",
+    "progress_data_set.to_sql(\n",
     "    table_name,\n",
     "    con=engine,\n",
     "    if_exists='replace',\n",
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
