--- a/drag_show.ipynb
+++ b/drag_show.ipynb
@@ -79,7 +79,7 @@
     "conn = mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"NilArj_21\",\n",
+    "    password=\"***\",\n",
     "    database=\"project\",\n",
     ")"
    ]
