--- a/etl_participants_table.ipynb
+++ b/etl_participants_table.ipynb
@@ -1339,7 +1339,7 @@
     }
    ],
    "source": [
-    "engine = create_engine(\"mysql+pymysql://root:NilArj_21@localhost:3306/project\")\n",
+    "engine = create_engine(\"mysql+pymysql://root:***@localhost:3306/project\")\n",
     "\n",
     "table_name = \"la_mas_draga\"\n",
     "\n",
