--- a/drag_tops.ipynb
+++ b/drag_tops.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "#connect to mysql database\n",
-    "%sql mysql://root:NilArj_21@localhost:3306/project"
+    "%sql mysql://root:***@localhost:3306/project"
    ]
   },
   {
